# Syncide

./: .gitignore  CMakeLists.txt  Cargo.toml  a.out  changelog  meson.build  test.cpp
.cache/clangd/index/: TknH.cpp.1D0AEC9F2D8EFC3B.idx  error.hpp.7B345D61719C3DD0.idx  lexer.cpp.2DC1D5E9D1DCE55B.idx  lexer.hpp.986A8ED756E8CB63.idx  main.cpp.3E0D44F4A6C7A933.idx
examples/: arrays.sy  calculator.sy  circumference.sr  closures.sr  enums.sr  foo_bar_baz.ri  foo_bar_baz.sy  hello_world.sr  hello_world.sy  if.sr  io.ri  loops.sr  mini-lexer.sy  new_features.sr  parser.sr  parser.sy  reading_files.ri  readme  structs.sr  structs.sy  test.sr  test.sy  types.sy
imitations/jai/: test_game.jai
lang/: Cargo.toml
lang/src/: main.rs
lang/src/parser/: ast.rs  error.rs  lexer.rs  mod.rs
ringfiles/: hello_world.ri  io.ri  parser.ri
scorch-temp/: Cargo.toml
scorch-temp/examples/: calculator.sr  readme
scorch-temp/src/parser/: error.rs  mod.rs
sh/: Cargo.toml
sh/src/: lib.rs
src/: lexer.cpp  main.cpp  main.rs  parser.cpp
src/include/: color.hpp  error.hpp  lexer.hpp  main.hpp
src/include/compiler/: compiler.hpp
src/include/parser/: ast.hpp  parser.hpp
src/include/typeChecker/: scopes.hpp
src/parser/: ast.rs  lexer.rs  mod.rs
src/typeChecker/: scopes.cpp
